GNOME Bugzilla – Bug 659439
empathy-CRITICAL **: account_join_chatrooms: assertion `conn != NULL' failed
Last modified: 2011-09-19 12:01:54 UTC
I just got this crash: empathy-CRITICAL **: account_join_chatrooms: assertion `conn != NULL' failed
+ Trace 228488
Created attachment 196927 [details] [review] Don't assume a connected TpAccount always have a TpConnection The connection object may not be there yet if tp-glib is still preparing its features.
Attachment 196927 [details] pushed as be57ef7 - Don't assume a connected TpAccount always have a TpConnection