Don't assume a connected TpAccount always have a TpConnection

The connection object may not be there yet if tp-glib is still preparing its
features.

https://bugzilla.gnome.org/show_bug.cgi?id=659439